--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,5 @@
+pydantic==2.7.0
+email-validator==2.1.1
 fastapi==0.108.0
 uvicorn[standard]==0.25.0
 bcrypt==4.1.2
@@ -6,3 +8,4 @@ pytest==8.0.0
 python-multipart==0.0.9 # para usar form data en OAuth2
 python-jose[cryptography]==3.3.0
 pymongo[srv]==4.6.1
+
